--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Sound Visual</title>
+        <script src="jquery-3.5.1.min.js"></script>
+        <script type="module" src="update.js"></script>
         <!-- https://medium.com/swlh/building-a-audio-visualizer-with-javascript-324b8d420e7 -->
     </head>
     <body>
@@ -11,6 +13,7 @@
         <button onclick="run()">Start!</button>
         <button onclick="stop()">Stop!</button>
 
+        
         <script>
             function start() {
                 let canvas = document.getElementById("audio_visual");
@@ -65,6 +68,7 @@
                 audioElement.currentTime = 0;
             }
         </script>
+        
     </body>
 </html>
 
