Api and Server Update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Sound Visual</title>
         <script src="jquery-3.5.1.min.js"></script>
-        <script type="module" src="update.js"></script>
+        <script src="update.js"></script>
         <!-- https://medium.com/swlh/building-a-audio-visualizer-with-javascript-324b8d420e7 -->
     </head>
     <body>
