--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Sound Visual</title>
+        <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
         <script src="jquery-3.5.1.min.js"></script>
         <script src="update.js"></script>
         <!-- https://medium.com/swlh/building-a-audio-visualizer-with-javascript-324b8d420e7 -->
