Pause Song added

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
         <picture>
             <source srcset="" media="(min-width: 600px)">
-            <img id="pic" src="picture/standart.jpg" alt="MDN">
+            <img id="pic" src="picture/standart.png" alt="MDN">
         </picture>      
     </body>
 </html>
